# MortalFlaw

./: AngleHelper.cpp  AngleHelper.h  CMakeLists.txt  Card.cpp  Card.h  Card_Dagger.cpp  Card_Dagger.h  Card_ForgeStrike.cpp  Card_ForgeStrike.h  Card_Sword.cpp  Card_Sword.h  Enemy.cpp  Enemy.h  LTexture.cpp  LTexture.h  MortalFlawState.cpp  Old_Main  Player.cpp  Player.h  README.md  Ui_Bar.cpp  Ui_Bar.h  basis.cpp  basis.h  examplegame.cpp  examplegame.h  gamebase.cpp  gamebase.h  global.h  introstate.cpp  main.cpp  plasmastate.cpp  recthelper.h
Ressources/Assets/: Object_Sprite_Base.aseprite  Sprite_Ball_Reference_64x64.aseprite
Ressources/Assets/Attacks/LANCE/: Card_Example_Lance.aseprite  Player_Attack_Lance.aseprite
Ressources/Assets/Attacks/SWORD/: Player_AttackIcon_Sword.aseprite  Player_Attack_Tiny_Icon_Sword.aseprite
Ressources/Assets/Enemy/: Object_Sprite_Base.aseprite
Ressources/Assets/Player/: Player_Sprite_Bases.aseprite
Ressources/Assets/UI/: Card_Select_Loop.aseprite
